# Human-Activity-Recognition

./: Dockerfile  Dockerfile_gpu  Makefile  pyproject.toml
