[tool.poetry]
name = "human-activity-recognition"
version = "0.1.0"
description = "A project for human activity recognition using deep learning."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
python = ">=3.10,<4.0"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^2.1.3"  # Adjusted for Python 3.10 and above
scipy = "^1.10.0"
pandas = "^1.5.3"
scikit-learn = "^1.2.0"
tensorflow = "^2.12.0"
keras = "^2.12.0"
matplotlib = "^3.6.0"
seaborn = "^0.12.2"
pyzmq = "^23.2.1"  # Updated to a compatible version

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
